2010-04-12  Andrew John Hughes  <ahughes@redhat.com>

	PR icedtea/373
	* Makefile.am: Add patch below.
	* patches/icedtea-nomotif-mtoolkit.patch:
	Backported change from OpenJDK (pre-b24).

2010-04-12  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/IcedTeaNPPlugin.cc (ITNP_New): Removed debug printf
	statement that didn't belong there.
	* plugin/icedteanp/java/sun/applet/PluginAppletViewer.java
	(createPanel): Don't print stack traces on InterruptedException.
	(handleMessage): Same.

2010-04-12  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am: Add patch below.
	* patches/nss-debug.patch:
	Improve debugging output from NSS provider.
	http://mail.openjdk.java.net/pipermail/security-dev/2010-April/001771.html

2010-04-12  Matthias Klose  <doko@ubuntu.com>

	PR icedtea/461
	* plugin/icedteanp/IcedTeaNPPlugin.cc (plugin_filter_ld_library_path):
	New, filter out paths in LD_LIBRARY_PATH which start with
	MOZILLA_FIVE_HOME.
	(plugin_filter_environment): New, build environment to pass to the
	appletviewer process.
	(plugin_test_appletviewer, plugin_start_appletviewer): Start the new
	process with the filtered environment.

2010-04-12  Xerxes Rånby  <xerxes@zafena.se>

	PR icedtea/459:
	* Makefile.am: (ICEDTEA_PATCHES):
	Apply patches/zero/shark_do_nothing_on_stub_frame.patch.
	* ports/hotspot/src/cpu/zero/vm/frame_zero.cpp
	(frame::is_fake_stub_frame): New method.
	* ports/hotspot/src/cpu/zero/vm/frame_zero.hpp
	(frame::is_fake_stub_frame): Likewise.
	* patches/zero/shark_do_nothing_on_stub_frame.patch: New.

2010-04-12  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Make NSS patch to main block as it's
	now applied unconditionally.

2010-04-12  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Add NETX_SRCDIR to EXTRA_DIST.

2010-04-12  Matthias Klose  <doko@ubuntu.com>

	* configure.ac: Clarify result message of the NSS check.

2010-04-11  Andrew John Hughes  <ahughes@redhat.com>
