@@ -1,8 +1,8 @@
 # Dependencies
 
-OPENJDK_DATE = 16_feb_2010
-OPENJDK_MD5SUM = 94db01691ab38f98b7d42b2ebf4d5c0b
-OPENJDK_VERSION = b18
+OPENJDK_DATE = 15_apr_2010
+OPENJDK_MD5SUM = 39bbf623a6c83ca63b92593062a28146
+OPENJDK_VERSION = b19
 OPENJDK_URL = http://download.java.net/openjdk/jdk6/promoted/$(OPENJDK_VERSION)/
 
 CACAO_VERSION = 0.99.4
