@@ -1,3 +1,7 @@
+2010-04-16  Andrew John Hughes  <ahughes@redhat.com>
+
+	* Makefile.am: Bump to b19 tarball.
+
 2010-04-12  Andrew John Hughes  <ahughes@redhat.com>
 
 	PR icedtea/373
